# ctrlops

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ctrlops.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cli-usage.md  configuration.md  examples.md  index.md  installation.md  modules.md  roadmap.md  screenshots.md  web-ui.md
src/ctrlops/: __init__.py  cli.py  config.py  database.py  main.py  models.py
src/ctrlops/services/: backup_service.py  deploy_service.py  dns_service.py  health_service.py  inventory_service.py  log_service.py  ssl_service.py
src/ctrlops/utils/: formatting.py  shell.py  validators.py
src/ctrlops/web/: app.py  routes.py
src/ctrlops/web/static/: app.js  styles.css
src/ctrlops/web/templates/: backups.html  base.html  dashboard.html  deploy.html  dns.html  health.html  inventory.html  logs.html  ssl.html
tests/: test_backup_service.py  test_cli.py  test_config.py  test_deploy_service.py  test_dns_service.py  test_inventory_service.py  test_log_service.py  test_ssl_service.py
